--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -109,6 +109,9 @@
     <PackageReference Include="Emgu.CV.UI">
       <Version>4.5.5.4823</Version>
     </PackageReference>
+    <PackageReference Include="NAudio">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
